<resources>
    <string name="app_name">DermoApp</string>
    <string name="getinto">Ingresar</string>
    <string name="terms">Al registrarse usted acepta los términos y condiciones</string>
    <string name="register">Registrarse</string>
    <string name="welcome">Bienvenid@</string>
    <string name="skintype">Tipo de piel</string>
    <string name="typeofinjury">Tipo de Herida</string>
    <string name="login">INICIAR SESIÓN</string>
    <string name="password">Contraseña</string>
    <string name="sign_in">INGRESAR</string>
    <string name="new_account">REGISTRARSE</string>
    <string name="SignUp">REGISTRAR</string>
    <string name="name">Nombres y Apellidos</string>
    <string name="birthday">Fecha nacimiento: dia/mes/año</string>
    <string name="nacionality">Nacionalidad</string>
    <string name="email">Correo electronico</string>
    <string name="log_out">Cerrar sesión</string>
    <string name="appointment">Crear Consulta</string>
    <string name="see">Ver detalle</string>
    <string name="creationdate">Fecha de creación</string>
    <string name="automatic">Consulta automática</string>
    <string name="status">Estado</string>
    <string name="diagnosis">Diagóstico</string>
    <string name="details">Detalle de la consulta</string>
    <string name="create_appointment">CREAR CONSULTA</string>
    <string name="automatic_appointment">CONSULTA AUTOMATICA</string>
    <string name="comment">Comentario</string>
    <string name="select_image">SELECCIONAR UNA IMAGEN</string>
    <string name="shapetype">Forma de la Herida</string>
    <string name="numberofinjuries">Número de Heridas</string>
    <string name="distribution">Distribución de la Herida</string>
    <string name="acceptdiagnosis">Aceptar Diagnostico</string>


</resources>