<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/imageLogin"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:background="@android:color/transparent"
            android:padding="16dp"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/logo"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/textViewSignUp"
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:layout_gravity="center"
            android:text="@string/app_name"
            android:textColor="@android:color/white"
            android:textSize="20sp"/>


    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="50dp"
                android:text="@string/login"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp"/>

            <EditText
                android:id="@+id/editTextEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="86dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/text_edit"
                android:ems="15"
                android:hint="@string/email"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                android:textColorHint="@android:color/black"
                android:textColor="@android:color/black"
                android:maxLength="10"
                android:paddingHorizontal="24dp"
                android:paddingVertical="16dp" />

            <EditText
                android:id="@+id/editTextPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="16dp"
                android:background="@drawable/text_edit"
                android:ems="15"
                android:hint="@string/password"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:textColorHint="@android:color/black"
                android:textColor="@android:color/black"
                android:paddingHorizontal="24dp"
                android:paddingVertical="16dp"
                app:passwordToggleEnabled="true"/>

            <Button
                android:id="@+id/btnSignIn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="16dp"
                android:paddingHorizontal="24dp"
                android:paddingVertical="8dp"
                android:text="@string/sign_in"
                android:textAllCaps="false"
                android:background="@color/colorPrimary"
                android:textColor="@android:color/white"
                android:textSize="20sp" />


            <TextView
                android:id="@+id/tvSignUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="16dp"
                android:onClick="signUpIntent"
                android:padding="8dp"
                android:text="@string/new_account"
                android:textAlignment="center"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>