<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">



    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="68dp"
        android:text="@string/login"
        android:textColor="#FF3700B3"
        android:textSize="22sp"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <!--            input text field-->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxBackgroundMode="none"
                android:paddingTop="20dp"
                android:drawablePadding="6dp"
                app:hintEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/inputEditText1"
                    android:hint="@string/email"
                    android:padding="10dp"
                    android:inputType="textEmailAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </com.google.android.material.textfield.TextInputLayout>

            <!--            input text field-->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="6dp"
                android:paddingTop="10dp"
                android:paddingBottom="35dp"
                app:boxBackgroundMode="none"
                app:hintEnabled="false"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/inputEditText2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:inputType="textEmailAddress"
                    android:padding="10dp" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/button_getinto"
                android:layout_width="180dp"
                android:layout_height="43dp"
                android:background="#FF3700B3"
                android:text="@string/getinto"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                app:backgroundTint="@null"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="115dp"
                tools:layout_editor_absoluteY="551dp" />

            <Button
                android:id="@+id/button_register"
                android:layout_width="180dp"
                android:layout_height="43dp"
                android:background="#FFFFFFFF"
                android:baselineAligned="false"
                android:text="@string/register"
                android:textColor="#FF3700B3"
                android:textSize="18sp"
                android:textStyle=""
                app:backgroundTint="@null"
                tools:layout_editor_absoluteX="197dp"
                tools:layout_editor_absoluteY="631dp" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <!--    Login btn-->



</androidx.constraintlayout.widget.ConstraintLayout>