<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".ConsultationDetailsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/imageDetailsIv"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:background="@android:color/transparent"
            android:onClick="detailBackIntent"
            android:padding="16dp"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/up"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/textViewSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/app_name"
            android:textColor="@android:color/white"
            android:textSize="20sp" />


    </LinearLayout>

    <TextView
        android:id="@+id/textViewDetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="12dp"
        android:text="@string/details"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/DetailsIv"
                android:layout_width="200sp"
                android:layout_height="200sp"
                android:layout_gravity="center"
                android:background="@android:color/transparent"
                android:padding="16dp"
                android:scaleType="centerCrop"/>

            <TextView
                android:id="@+id/DetailsTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="12dp"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp"/>

            <Button
                android:id="@+id/btnAcceptDiagnosis"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="16dp"
                android:background="@color/colorPrimary"
                android:onClick="acceptDiagnosis"
                android:paddingHorizontal="24dp"
                android:paddingVertical="8dp"
                android:text="@string/acceptdiagnosis"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="20sp" />


        </LinearLayout>
    </ScrollView>
</LinearLayout>